syntax = "proto3";
option java_multiple_files = true;
option java_package = "io.homo.proto.entity.test";     // 指定包名
option java_outer_classname = "EntityTest"; // 指定类名

message QueryInfoRequest {
  string channelId = 1;
}

message QueryInfoResponse {
  int32 code = 1;
  int64 beforeQueryTime = 2;
}

message EnterGameRequest {
  string playId = 1;
  string playType = 2;
  string chapterId = 3;
}

message EnterGameResponse {
  int32 code = 1;
}

message LeaveGameRequest {
  string playId = 1;
  int32 isWin = 2;
  int32  score = 3;
}
message LeaveGameResponse {
  repeated PlayRecordPb records = 1;
}

message PlayRecordPb{
  string playId = 1;
  string playType = 2;
  string chapterId = 3;
  int32 isWin = 4;
  int32 score = 5;
}